Fix alignment of images on last recommendations

--- a/wiki/src/install/inc/stylesheets/steps.css
+++ b/wiki/src/install/inc/stylesheets/steps.css
@@ -135,10 +135,6 @@ h3 {
   padding-left: 66px;
 }
 
-#recommendations h3, #recommendations p:first-child, #recommendations p:last-child {
-  text-align: center;
-}
-
 #recommendations .row p {
   background: #56347C;
   color: white;
@@ -151,7 +147,7 @@ h3 {
   text-decoration: underline;
 }
 
-#recommendations img {
+#recommendations img.float-left {
   float: left;
 }
 
